<resources>
    <string name="app_name">ShopFloor</string>

    <string name="please_wait_onprocess">Sedang Prosess</string>
    <string name="tgl_dokumen">Tgl. Dokumen</string>
    <string name="tanggal">04-03-2019</string>
    <string name="no_produksi">No. Produksi</string>
    <string name="no_dokumen">No Dokumen</string>
    <string name="produk">Produk</string>
    <string name="reject">Reject</string>
    <string name="info"
       size="@dimen/_15font_mdp" >Info</string>
    <string name="criteria">Criteria</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searc_producorder">Cari Productorder</string>
    <string name="jam_mulai">Jam Mulai</string>
    <string name="title_activity_add_seq">AddSeqActivity</string>
    <string name="closedDrawr">apilkasi ditutup</string>
    <string name="open_drawer">aplikasi di open</string>
</resources>
