<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.InfoFragment">

   <LinearLayout
       android:id="@+id/line5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
    <TextView
        android:id="@+id/tvNo_doc_Frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_dokumen"
        android:paddingTop="20dp"
        android:layout_marginLeft="70dp"
        />

    <TextView
        android:id="@+id/tvNo_doc_Frag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="S20190304001"
        android:layout_marginLeft="10dp"
        android:paddingTop="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_noProd_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_produksi"
        android:paddingTop="20dp"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/tv_noProd_frag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10015637"
        android:paddingTop="20dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_tglDoc_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tgl_dokumen"
        android:paddingTop="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/tv_tglDoc_frag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="tanggal doc"
        android:paddingTop="20dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"/>
   </LinearLayout>

<LinearLayout
    android:id="@+id/line8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/line5"
    android:orientation="horizontal">

    <!--kiri-->
    <RelativeLayout
        android:id="@+id/rel0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/line5"
        android:layout_marginLeft="5dp"
        android:layout_weight="10">

        <TextView
            android:id="@+id/tv_prodFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="Produk" />

        <TextView
            android:id="@+id/tv_prodFrag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="130dp"
            android:paddingTop="20dp"
            android:text="ini produk"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/relnamaprod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_prodFrag">
        <TextView
            android:id="@+id/tv_nmProd_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="Nama Produk" />

        <TextView
            android:id="@+id/tv_nmProd_frag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="130dp"
            android:paddingTop="15dp"
            android:text="nama produk"
            android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_qty_rencana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relnamaprod"
            android:paddingTop="15dp"
            android:text="Qty Rencana Prod" />

        <TextView
            android:id="@+id/tv_qty_rencana1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relnamaprod"
            android:paddingLeft="130dp"
            android:paddingTop="15dp"
            android:text="ini qty renc prod"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sts_prod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_qty_rencana"
            android:paddingTop="15dp"
            android:text="Status Produksi" />

        <TextView
            android:id="@+id/tv_sts_prod1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_qty_rencana1"
            android:paddingLeft="130dp"
            android:paddingTop="15dp"
            android:text="ini sts prod"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sts_prod"
            android:paddingTop="15dp"
            android:text="Route Code" />

        <TextView
            android:id="@+id/tv_route1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sts_prod1"
            android:paddingLeft="130dp"
            android:paddingTop="15dp"
            android:text="route code"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvroutename3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_route1"
            android:layout_below="@id/tv_sts_prod1"
            android:layout_marginLeft="5dp"
            android:paddingTop="15dp"
            android:textStyle="bold"
            android:text="route name"/>

        <TextView
            android:id="@+id/tv_inQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_route"
            android:paddingTop="15dp"
            android:text="In Qty" />

        <TextView
            android:id="@+id/tv_inQty1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_route"
            android:paddingLeft="130dp"
            android:paddingTop="15dp"
            android:text="ini in qty"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_outQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_inQty"
            android:paddingTop="15dp"
            android:text="Out Qty" />

        <TextView
            android:id="@+id/tv_outQty1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_inQty"
            android:paddingLeft="130dp"
            android:paddingTop="15dp"
            android:text="ini out qty"
            android:textStyle="bold" />
    </RelativeLayout>
    <!--kiri-->

    <!--kanan-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20">
    <TextView
        android:id="@+id/tv_seq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Squence"
        android:paddingTop="20dp"
        />

    <TextView
        android:id="@+id/tv_seq1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_seq"
        android:layout_marginLeft="40dp"
        android:text="ini squence"
        android:paddingTop="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_seq_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Squence Qty"
        android:layout_below="@id/tv_seq1"
        android:paddingTop="15dp"
        />

    <TextView
        android:id="@+id/tv_seq_qty1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_seq_qty"
        android:layout_marginLeft="20dp"
        android:text="ini seq qty"
        android:layout_below="@id/tv_seq1"
        android:paddingTop="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_shift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shift"
        android:layout_below="@id/tv_seq_qty"
        android:paddingTop="15dp"
        />

    <TextView
        android:id="@+id/tv_shift1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ini shift"
        android:layout_toRightOf="@id/tv_shift"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/tv_seq_qty1"
        android:paddingTop="15dp"
        android:textStyle="bold"
        />
        <TextView
            android:id="@+id/tvstrip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_seq_qty1"
            android:paddingTop="15dp"
            android:layout_toRightOf="@id/tv_shift1"
            android:text=" - "
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvnmshift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tvstrip1"
            android:layout_below="@id/tv_seq_qty1"
            android:paddingTop="15dp"
            android:textStyle="bold"
            android:text="nama shift"
            />

    <TextView
        android:id="@+id/tv_tglMulai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tgl Mulai"
        android:layout_below="@id/tv_shift1"
        android:paddingTop="15dp"
        />

    <TextView
        android:id="@+id/tv_tglMulai1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_tglMulai"
        android:layout_marginLeft="40dp"
        android:text="ini tgl mulai"
        android:layout_below="@id/tv_shift1"
        android:paddingTop="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_tglSelesai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tgl Selesai"
        android:layout_below="@id/tv_tglMulai"
        android:paddingTop="15dp"
        />

    <TextView
        android:id="@+id/tv_tglSelesai1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_tglSelesai"
        android:layout_marginLeft="30dp"
        android:text="ini tgl sel"
        android:layout_below="@id/tv_tglMulai"
        android:paddingTop="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_jamMulai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="jam Mulai"
        android:layout_below="@id/tv_tglSelesai"
        android:paddingTop="15dp"
        />

    <TextView
        android:id="@+id/tv_jamMulai1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="ini jam mulai"
        android:layout_toRightOf="@id/tv_jamMulai"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/tv_tglSelesai"
        android:paddingTop="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_jamSelesai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="jam Selesai"
        android:layout_below="@id/tv_jamMulai"
        android:paddingTop="15dp"
        />

    <TextView
        android:id="@+id/tv_jamSelesai1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_jamSelesai"
        android:layout_marginLeft="30dp"
        android:text="ini jam selesai"
        android:layout_below="@id/tv_jamMulai"
        android:paddingTop="15dp"
        android:textStyle="bold"
        />
    </RelativeLayout>
</LinearLayout>


</RelativeLayout>